--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>TOTLE Login/Signup</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
@@ -87,7 +87,6 @@
               <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub">
               <span>Continue with GitHub</span>
             </button>
-           
           </div>
         </div>
 
@@ -103,13 +102,12 @@
             <i class="fas fa-eye-slash toggle-password" data-target="loginPassword"></i>
           </div>
           <div class="remember-me">
-  <input type="checkbox" id="remember">
-  <label for="remember">Remember me</label>
-</div>
+            <input type="checkbox" id="remember">
+            <label for="remember">Remember me</label>
+          </div>
           <div class="forgot-password">
-    <a href="#">Forgot Password?</a>
-  </div>
-
+            <a href="#">Forgot Password?</a>
+          </div>
           <button class="auth-btn">Continue</button>
           <div class="auth-footer">
             <p>By continuing, you agree to the <a href="#">Terms</a> and <a href="#">Privacy Policy</a>.</p>
@@ -124,7 +122,6 @@
               <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub">
               <span>Continue with GitHub</span>
             </button>
-            
           </div>
         </div>
       </div>
